--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
+    "json-server": "^0.17.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock": "json-server -w -p 3333 ./mock/database.json"
   },
   "eslintConfig": {
     "extends": [
